# quickwork

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debian  README.md  build.sh
include/: config.hpp  handler_store.hpp  js_bindings.hpp  js_runtime.hpp  kv_store.hpp  module_resolver.hpp  server.hpp  thread_pool.hpp
src/: handler_store.cpp  js_bindings.cpp  js_runtime.cpp  kv_store.cpp  main.cpp  module_resolver.cpp  server.cpp  thread_pool.cpp
tests/: run_tests.sh
